--- a/index.html
+++ b/index.html
@@ -7,22 +7,24 @@
     <title>personal information</title>
 </head>
 <body>
-    <div>
-        <h1>Hi, Im Mohamed Ibrahim</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex amet minus molestias ipsa voluptatum nemo?</p>
-        <img src="/imgs/img.jpg" alt="its my image">
-    </div>
-    <div class="info">
-        <h3>My Personal information</h3>
+    <section class="center">
 
-        <table>
-            <thead>
-                <tr>
-                    <th>information</th>
-                    <th>details</th>
-                </tr>
-            </thead>
-            <tbody>
+        <div>
+            <h1>Hi, Im Mohamed Ibrahim</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex amet minus molestias ipsa voluptatum nemo?</p>
+            <img src="/imgs/img.jpg" alt="its my image">
+        </div>
+        <div class="info">
+            <h3>My Personal information</h3>
+            
+            <table class="center">
+                <thead>
+                    <tr>
+                        <th>information</th>
+                        <th>details</th>
+                    </tr>
+                </thead>
+                <tbody>
                 <tr>
                     <td>name</td>
                     <td>mohamed</td>
@@ -39,8 +41,13 @@
                     <td>occupation</td>
                     <td>student</td>
                 </tr>
+                <tr>
+                    <td><a href="home.html">home</a></td>
+                    <td><a href="contact.html">contact</a></td>
+                </tr>
             </tbody>
         </table>
     </div>
+</section>
 </body>
 </html>
